<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_chatbox"
            android:icon="@drawable/penny_icon"
            android:title="@string/PENNY" />

        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/schedule_icon"
            android:title="@string/schedule" />

        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/search_icon"
            android:title="@string/search" />

        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/favorite_icon"
            android:title="@string/favorite" />

        <item
            android:id="@+id/nav_media"
            android:icon="@drawable/media_icon"
            android:title="@string/media" />

    </group>

    <item android:title="@string/profile">

        <menu>

            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/logout_icon"
                    android:title="@string/logout" />
            </group>
        </menu>

    </item>

</menu>