<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/box_design"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/tripedit_place"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/search_address"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tripedit_delete"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tripedit_place"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/delete"
            android:textSize="15sp"
            android:visibility="gone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/tripedit_date"
            android:layout_toLeftOf="@+id/tripedit_date"
            android:text="@string/day"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/tripedit_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/date"
            android:textSize="40sp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>