<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/box_design"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/search_name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:text="@string/search_name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/search_address"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/search_name"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:text="@string/search_address" />

        <TextView
            android:id="@+id/search_time"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/search_address"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:text="@string/search_time" />

        <TextView
            android:id="@+id/search_phone"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/search_time"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:text="@string/search_phone" />

        <TextView
            android:id="@+id/search_introduce"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/search_phone"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:text="@string/search_introduce" />

        <ImageView
            android:id="@+id/search_img"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="25dp"
            android:layout_toEndOf="@+id/search_time"
            android:layout_toRightOf="@+id/search_time"
            android:src="@mipmap/ic_launcher" />

        <ImageView
            android:id="@+id/search_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/search_introduce"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/add_icon" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>